--- a/.gitignore
+++ b/.gitignore
@@ -134,4 +134,11 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Stuff from supabase:
+.branches/
+.temp/
+.vscode/
 
+#npm stuff
+node_modules/
+package-lock.json
